# omnimaxbot

./: LICENSE  README.md
LMS1xx/: CMakeLists.txt
LMS1xx/launch/: LMS1xx.launch  LMS1xx_front.launch  LMS1xx_rear.launch
LMS1xx/src/: LMS1xx_node_edit (copy).cpp  LMS1xx_node_front (copy).cpp  LMS1xx_node_front.cpp  LMS1xx_node_rear.cpp
ax2550/: CMakeLists.txt  README.md  package.xml
ax2550/include/ax2550/: ax2550.h
ax2550/launch/: ax2550.launch
ax2550/src/: ax2550.cc  ax2550_node.cc  ax2550_node_front.cc  ax2550_node_rear.cc  ax2550_omnimaxbot.cc  omni_cmd_vel.cpp  omni_odom.cpp
laser_limiters/: CMakeLists.txt  package.xml
laser_limiters/launch/: front_laser_limiter.launch  laser_limiter_test.launch  laser_limiters.launch  rear_laser_limiter.launch
laser_limiters/src/: front_scan_limiter.cpp  rear_scan_limiter.cpp
laser_scan_matcher/: CMakeLists.txt  CMakeLists.txt~
laser_scan_matcher/src/: laser_scan_matcher_odom.cpp
omnimaxbot/: CMakeLists.txt  package.xml
omnimaxbot_2d_nav/: CMakeLists.txt  LICENSE  README.md  package.xml
omnimaxbot_2d_nav/calibration/: 0_left.yaml  0_right.yaml
omnimaxbot_2d_nav/config/: amcl_params.yaml  ar_sys_params.yaml  base_local_planner_params.yaml  camera1394stereo_params.yaml  costmap_common_params.yaml  ekf_params.yaml  global_costmap_params.yaml  laser_scan_matcher_config.yaml  local_costmap_params.yaml  robot_localization_params.yaml
omnimaxbot_2d_nav/config/move_base_params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
omnimaxbot_2d_nav/launch/: amcl.launch  amcl_local.launch  ax2550_amcl.launch  gmapping.launch  hector_mapping.launch  laser_amcl.launch  move_base.launch  omnibot_configuration.launch
omnimaxbot_2d_nav/maps/: UA1460_512_third.pgm  UA1460_512_third.yaml  UA1460_hector_512.pgm  UA1460_hector_512.yaml  my_map.pgm  my_map.yaml
omnimaxbot_2d_nav/rviz/: gmapping.rviz  test.rviz
omnimaxbot_control/: CMakeLists.txt  README.md  package.xml  ros_env.sh
omnimaxbot_control/launch/: ar_sys.launch  ar_sys_approach.launch  ax2550_odom_test .launch  camera.launch  depth_to_scan.launch  ekf.launch  forklift_test.launch  kinect.launch  kinect_test.launch  laser_limiting_test.launch  laser_odom_test.launch  machine_teleop_test.launch  nav_test.launch  nav_test_rpekf.launch  odom_test.launch  omnimaxbot_amcl.launch  omnimaxbot_gmapping.launch  omnimaxbot_hector_mapping.launch  omnimaxbot_move.launch  omnimaxbot_move_test.launch  omnimaxbot_test.launch  phidgets_test.launch  rpekf_test.launch  stereo_camera.launch  teleop_test.launch
omnimaxbot_control/src/: Pseudocode  approach.cpp  arsys_test.cpp  control.cpp  control2.cpp  get_angles.cpp  integrated_sys (copy).cpp  integrated_sys.cpp  move (copy).cpp  move.cpp  move_test.cpp  odom.cpp  republish_scans.cpp
omnimaxbot_description/: CMakeLists.txt  README.md  package.xml
omnimaxbot_description/src/: tf_broadcaster.cpp
omnimaxbot_teleop/: CMakeLists.txt  README.md  package.xml
omnimaxbot_teleop/launch/: teleop.launch
omnimaxbot_teleop/src/: omnimaxbot_joystick_teleop.cpp
phidgets/: API.html  CMakeLists.txt  README  README.md  edit.sh  joystick_control.launch  lidar.launch  mainpage.dox  odometry.launch  package.xml  servo_glimpse.launch  stepper.launch
phidgets/.bzr/branch/: branch.conf  last-revision
phidgets/.bzr/checkout/: dirstate
phidgets/.bzr/repository/: pack-names
phidgets/msg/: accelerometer_params.msg  interface_kit_params.msg  ir_params.msg  led_params.msg  manager_params.msg  motor_params.msg  pantilt_params.msg  phsensor_params.msg  pid_params.msg  rfid_params.msg  servo_params.msg  spatial_params.msg  stepper_params.msg  textlcd_params.msg
phidgets/robots/: 10-video-grok2.rules  calibration.rodney  calibration_front.grok2  calibration_rear.grok2  grok2_glimpse.launch  rodney_glimpse.launch
phidgets/src/: motor_control_hc.cpp  motor_control_hc_1065.cpp  motor_control_hc_1065_backup.cpp  simple_servo.cpp
phidgets/srv/: interface_kit.srv  lidar_control.srv  pid.srv  servo_reference.srv
