<?xml version="1.0"?>
<package>
  <name>ax2550</name>
  <version>0.1.1</version>
  <description>Package which provides a library and a ROS ndoe for interfacing with the Roboteq AX2550 motor controller.</description>

  <maintainer email="wjwwood@gmail.com">William Woodall</maintainer>

  <license>MIT</license>

  <url type="repository">http://github.com/wjwwood/ax2550</url>
  <url type="bugtracker">http://github.com/wjwwood/ax2550/issues</url>

  <author email="wjwwood@gmail.com">William Woodall</author>
  <author email="carroll.michael@gmail.com">Michael Carroll</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>serial_utils</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>serial_utils</run_depend>
  <run_depend>tf</run_depend>

</package>